# musical-analysis-app

./: .buildinfo  .pre-commit-config.yaml  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.devcontainer/: devcontainer.json
.github/workflows/: sphinx_doc.yaml  tests.yaml
_modules/: index.html
_modules/musical_analysis_app/: app.html
_modules/musical_analysis_app/dashboard_tabs/: caracteristics_tab.html  popularity_tab.html  recommendations_tab.html  tendances_tab.html
_modules/musical_analysis_app/pages/: dashboard.html
_modules/musical_analysis_app/utils/: dashboard_utils.html
_sources/: index.rst.txt  modules.rst.txt
docs/source/: conf.py  index.rst  modules.rst
src/musical_analysis_app/: app.py
src/musical_analysis_app/dashboard_tabs/: caracteristics_tab.py  popularity_tab.py  recommendations_tab.py  tendances_tab.py
src/musical_analysis_app/pages/: dashboard.py
src/musical_analysis_app/utils/: dashboard_utils.py  features.py
tests/: test_dashboard_utils.py
