[project]
name = "musical-analysis-app"
version = "0.1.0"
description = ""
authors = [
    {name = "mal-mak",email = "malekhlouf@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.41.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "musical_analysis_app", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
