[project]
name = "musical-analysis-app"
version = "0.1.0"
description = ""
authors = [
    {name = "mal-mak",email = "malekhlouf@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.41.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "plotly (>=5.24.1,<6.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "pytest-cov (>=6.0.0,<7.0.0)",
    "ruff (>=0.9.2,<0.10.0)",
    "pre-commit (>=4.0.1,<5.0.0)",
]

[tool.poetry]
packages = [{include = "musical_analysis_app", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
